finished student home

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -4,9 +4,11 @@
       xmlns:h="http://java.sun.com/jsf/html">
     <h:head>
         <title>Facelet Title</title>
+        <script id="globals" values="#{a.message}"></script>
+        <h:outputStylesheet library="css" name="tails.css" />
     </h:head>
-    <h:body>
-        Hello from Facelets
+    <h:body class="">
+        Hello from Facelets emma azza
     </h:body>
 </html>
 
