--- a/web/account/register.xhtml
+++ b/web/account/register.xhtml
@@ -1,7 +1,8 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html
     PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
+    xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <title>BetterCanvas - New Account</title>
     <!-- <h:outputStylesheet library="css" name="tails.css" /> -->
@@ -9,66 +10,102 @@
 </h:head>
 <h:body>
     <div class="w-full h-full fixed z-[-99999]">
-        <div class="w-[40%] py-3 m-auto mt-10 rounded-lg shadow-lg bg-gradient-to-br from-red-600 to-red-900">
-            <div class="mb-3">
-                <p class="text-5xl text-white font-bold text-center p-3">
-                    Better Canvas
-                </p>
-                <hr class="border-red-700 mx-1" />
-            </div>
-
-            <div class="px-3">
-                <div class="text-red-700">
-                    <label for="lastname" class="block text-white font-bold">Last Name
-                    </label>
-                    <input class="w-full h-9 text-xl text-black" type="text" id="lastname" />
-                    <p>Error for last name</p>
+        <h:form>
+            <div class="w-[40%] mx-auto mt-3 rounded-lg shadow-lg bg-gradient-to-br from-red-600 to-red-900">
+                <div class="mb-3">
+                    <p class="text-5xl text-white font-bold text-center p-2">
+                        Better Canvas
+                    </p>
+                    <hr class="border-red-700 mx-1" />
                 </div>
 
-                <div class="text-red-700">
-                    <label for="firstname" class="block text-white font-bold">First Name
-                    </label>
-                    <input class="w-full h-9 text-xl text-black" type="text" id="firstname" />
-                    <p>Error for first name</p>
-                </div>
-
-                <div class="text-red-700">
-                    <label for="email" class="block text-white font-bold">Email
-                    </label>
-                    <input class="w-full h-9 text-xl text-black" type="email" id="email" />
-                    <p>Error for email</p>
-                </div>
-
-
-                <div class="text-red-700">
-                    <label for="newpassword" class="block text-white font-bold">New Password
-                    </label>
-                    <input class="w-full h-9 text-xl text-black" type="password" id="newpassword" />
-                    <p>Error for password</p>
-                </div>
-
-                <div class="text-red-700 mt-2">
-                    <label for="confpassword" class="block text-white font-bold">Confirm Password
-                    </label>
-                    <input class="w-full h-9 text-xl text-black" type="password" id="confpassword" />
-                    <p>Error for password conf</p>
-                </div>
-
-                <div>
-                    <div class="float-left text-red-800">
-                        <p class="mt-3 text-sm text-white font-bold">Have an account?</p>
-                        <p><a class="text-white underline" href="#">Login</a></p>
+                <div class="px-3">
+                    <div class="text-red-700 relative mt-3">
+                        <label for="name" class="block text-white font-bold">Name
+                        </label>
+                        <h:inputText class="w-full h-7 text-black rounded-lg px-1 font-bold tracking-wide" id="name"
+                                     validatorMessage="Name should not exceed 30 characters" value="#{registrationData.name}">
+                            <f:validateLength maximum="30" />
+                            <f:ajax render="namemessage" />
+                        </h:inputText>
+                        <h:message id="namemessage" for="name" class="text-white text-sm relative top-[-5px]" />
                     </div>
-                    <div class="float-right">
-                        <button
-                            class="float-right p-2 px-24 bg-white rounded-xl text-red-800 font-bold text-xl border-0 mt-1">
-                            Register
-                        </button>
+
+                    <div class="text-red-700 relative mt-3">
+                        <label for="surname" class="block text-white font-bold">Surname
+                        </label>
+                        <h:inputText class="w-full h-7 text-black rounded-lg px-1 font-bold tracking-wide" id="surname"
+                                     validatorMessage="Surname should not exceed 30 characters" value="#{registrationData.surName}">
+                            <f:validateLength maximum="30" />
+                        </h:inputText>
+                        <h:message for="surname" class="text-white text-sm relative top-[-5px]" />
                     </div>
-                    <div class="clear-both"></div>
+
+                    <div class="text-red-700 relative mt-3">
+                        <label for="email" class="block text-white font-bold">Email
+                        </label>
+                        <h:inputText class="w-full h-7 text-black rounded-lg px-1 font-bold tracking-wide" id="email"
+                            value="#{registrationData.email}"
+                            validator="#{validators.validateEmail}">
+                            <f:validateLength maximum="30" />
+                            <f:ajax render="emailmessage"/>
+                        </h:inputText>
+                        <h:message id="emailmessage" for="email" class="text-white text-sm relative top-[-5px]" />
+                    </div>
+
+                    <div class="text-red-700 mt-3">
+                        <label for="birthdate" class="block text-white font-bold">Birthdate
+                        </label>
+                        <input class="w-full h-7 text-black rounded-lg px-1 font-bold tracking-wide" type="date"
+                               id="birthdate" value="#{registrationData.birthDate}"/>
+                        <h:message for="birthdate" />
+                    </div>
+
+                    <div class="text-red-700 mt-3">
+                        <label for="country" class="block text-white font-bold">Country
+                        </label>
+                        <input class="w-full h-7 text-black rounded-lg px-1 font-bold tracking-wide" type="text"
+                               id="country" value="#{registrationData.country}"/>
+                        <h:message for="country" />
+                    </div>
+
+
+                    <div class="text-red-700 relative mt-3">
+                        <label for="newpassword" class="block text-white font-bold">Password
+                        </label>
+                        <h:inputText class="w-full h-7 text-black rounded-lg px-1 font-bold tracking-wide" id="newpassword"
+                                     validatorMessage="Name should not exceed 30 characters" value="#{registrationData.newPassword}">
+                            <f:validateLength maximum="30" />
+                        </h:inputText>
+                        <h:message for="newpassword" class="text-white text-sm relative top-[-5px]" />
+                    </div>
+
+                    <div class="text-red-700 relative mt-3">
+                        <label for="confpassword" class="block text-white font-bold">Confirm Password
+                        </label>
+                        <h:inputText class="w-full h-7 text-black rounded-lg px-1 font-bold tracking-wide" id="confpassword"
+                                     validatorMessage="Name should not exceed 30 characters" value="#{registrationData.confPassword}">
+                            <f:validateLength maximum="30" />
+                        </h:inputText>
+                        <h:message for="confpassword" class="text-white text-sm relative top-[-5px]" />
+                    </div>
+
+                    <div>
+                        <div class="float-left text-red-800">
+                            <p class="mt-3 text-sm text-white font-bold">Have an account?</p>
+                            <p><a class="text-white underline" href="#">Login</a></p>
+                        </div>
+                        <div class="float-right">
+                            <button
+                                class="float-right p-2 px-24 bg-white rounded-xl text-red-800 font-bold text-xl border-0 mt-1">
+                                Register
+                            </button>
+                        </div>
+                        <div class="clear-both"></div>
+                    </div>
                 </div>
             </div>
-        </div>
+        </h:form>
     </div>
 </h:body>
 
