--- a/web/account/password.xhtml
+++ b/web/account/password.xhtml
@@ -1,75 +1,80 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html
     PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html">
-<h:head>
-    <title>BetterCanvas - Forgot Password</title>
-    <!-- <h:outputStylesheet library="css" name="tails.css" /> -->
-    <link href="../resources/css/tails.css" rel="stylesheet" />
-</h:head>
-<h:body>
-    <div class="w-full h-full fixed z-[-99999]">
-        <div class="w-[40%] py-3 m-auto mt-10 rounded-lg shadow-lg bg-red-800">
-            <div class="mb-3">
-                <p class="text-5xl text-white font-bold text-center p-3">
-                    Better Canvas
-                </p>
-                <hr class="border-red-700 mx-1" />
-            </div>
-
-            <div class="px-3">
-                <div class="text-red-700">
-                    <label for="email" class="block text-white font-bold">Email
-                    </label>
-                    <input class="w-full h-9 text-xl text-black" type="email" id="email" />
-                    <p>Error for email</p>
-                    <button class="float-right p-2 bg-black text-white border-0 mt-1">
-                        Request Code
-                    </button>
-                    <div class="clear-both"></div>
-                </div>
-
-                <div class="text-red-700">
-                    <label for="confcode" class="block text-white font-bold">Confirmation Code
-                    </label>
-                    <input class="w-full h-9 text-xl text-black" type="number" id="confcode" />
-                    <p>Error for conf code</p>
-                    <button class="float-right p-2 bg-black text-white border-0 mt-1">
-                        Confirm
-                    </button>
-                    <div class="clear-both"></div>
-                </div>
-
-                <div class="text-red-700">
-                    <label for="newpassword" class="block text-white font-bold">New Password
-                    </label>
-                    <input class="w-full h-9 text-xl text-black" type="password" id="newpassword" />
-                    <p>Error for password</p>
-                </div>
-
-                <div class="text-red-700 mt-2">
-                    <label for="confpassword" class="block text-white font-bold">Confirm Password
-                    </label>
-                    <input class="w-full h-9 text-xl text-black" type="password" id="confpassword" />
-                    <p>Error for password conf</p>
-                </div>
-
-                <div>
-                    <div class="float-left text-red-800">
-                        <p class="mt-3 text-sm text-white font-bold">Have an account?</p>
-                        <p><a class="text-white underline" href="#">Login</a></p>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
+    <h:head>
+        <title>BetterCanvas - Forgot Password</title>
+        <!-- <h:outputStylesheet library="css" name="tails.css" /> -->
+        <link href="../resources/css/tails.css" rel="stylesheet" />
+    </h:head>
+    <h:body>
+        <div class="w-full h-full fixed z-[-99999]">
+            <h:form id="resetform">
+                <div class="w-[40%] py-3 m-auto mt-10 rounded-lg shadow-lg bg-red-800">
+                    <div class="mb-3">
+                        <p class="text-5xl text-white font-bold text-center p-3">
+                            Better Canvas
+                        </p>
+                        <hr class="border-red-700 mx-1" />
                     </div>
-                    <div class="float-right">
-                        <button
-                            class="float-right p-2 px-20 bg-white rounded-xl text-red-800 font-bold text-xl border-0 mt-1">
-                            Change Password
-                        </button>
+
+                    <div class="px-3">
+                        <div class="text-red-700">
+                            <h:outputLabel for="email" class="block text-white font-bold" value="Email"/>
+                            <h:inputText class="w-full h-9 text-xl text-black" id="email"
+                                         value="#{passwordReset.email}" validator="#{validators.validateEmail}">
+                                <f:ajax render="emailmessage" />
+                            </h:inputText>
+                            <h:message id="emailmessage" for="email" class="text-white text-sm relative top-[-5px]" />
+                            <h:commandButton class="float-right p-2 bg-black text-white border-0 mt-1" id="codebutton"
+                                             value="Request Code" action="#" type="button">
+                                <f:ajax event="click" listener="#{passwordReset.seed(evt)}" render="codebuttonmessage"/>
+                            </h:commandButton>
+                            <div class="clear-both"></div>
+                            <h:message id="codebuttonmessage" for="codebutton" class="text-white text-sm relative top-[-5px]" />
+                        </div>
+
+                        <h:panelGroup class="text-red-700" rendered="#{not empty passwordReset.confirmationCode}" id="confcodediv">
+                            <h:outputLabel for="confcode" class="block text-white font-bold" value="Confirmation Code" />
+                            <h:inputText class="w-full h-9 text-xl text-black" id="confcode" />
+                            <h:message for="confcode" />
+                            <div class="clear-both"></div>
+                        </h:panelGroup>
+
+                        <h:panelGroup rendered="#{passwordReset.code == passwordReset.confirmationCode}">
+                            <div class="text-red-700">
+                                <label for="newpassword" class="block text-white font-bold">New Password
+                                </label>
+                                <input class="w-full h-9 text-xl text-black" type="password" id="newpassword" />
+                                <h:message for="newpassword" />
+                            </div>
+
+                            <div class="text-red-700 mt-2">
+                                <label for="confpassword" class="block text-white font-bold">Confirm Password
+                                </label>
+                                <input class="w-full h-9 text-xl text-black" type="password" id="confpassword" />
+                                <h:message for="confpassword" />
+                            </div>
+                        </h:panelGroup>
+
+                        <div>
+                            <div class="float-left text-red-800">
+                                <p class="mt-3 text-sm text-white font-bold">Have an account?</p>
+                                <p><a class="text-white underline" href="#">Login</a></p>
+                            </div>
+                            <div class="float-right">
+                                <button
+                                    class="float-right p-2 px-20 bg-white rounded-xl text-red-800 font-bold text-xl border-0 mt-1">
+                                    Change Password
+                                </button>
+                            </div>
+                            <div class="clear-both"></div>
+                        </div>
                     </div>
-                    <div class="clear-both"></div>
                 </div>
-            </div>
+            </h:form>
         </div>
-    </div>
-</h:body>
+    </h:body>
 
 </html>
