--- a/web/account/password.xhtml
+++ b/web/account/password.xhtml
@@ -2,7 +2,7 @@
 <!DOCTYPE html
     PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
         <title>BetterCanvas - Forgot Password</title>
         <!-- <h:outputStylesheet library="css" name="tails.css" /> -->
@@ -24,38 +24,49 @@
                             <h:outputLabel for="email" class="block text-white font-bold" value="Email"/>
                             <h:inputText class="w-full h-9 text-xl text-black" id="email"
                                          value="#{passwordReset.email}" validator="#{validators.validateEmail}">
-                                <f:ajax render="emailmessage" />
+                                <f:ajax render="emailmessage" event="change"/>
                             </h:inputText>
                             <h:message id="emailmessage" for="email" class="text-white text-sm relative top-[-5px]" />
                             <h:commandButton class="float-right p-2 bg-black text-white border-0 mt-1" id="codebutton"
-                                             value="Request Code" action="#" type="button">
-                                <f:ajax event="click" listener="#{passwordReset.seed(evt)}" render="codebuttonmessage"/>
+                                             value="Request Code" type="button" actionListener="#{passwordReset.seed}">
+                                <f:ajax render="codebuttonmessage confcodediv" onevent="showCode"/>
                             </h:commandButton>
                             <div class="clear-both"></div>
                             <h:message id="codebuttonmessage" for="codebutton" class="text-white text-sm relative top-[-5px]" />
                         </div>
 
-                        <h:panelGroup class="text-red-700" rendered="#{not empty passwordReset.confirmationCode}" id="confcodediv">
-                            <h:outputLabel for="confcode" class="block text-white font-bold" value="Confirmation Code" />
-                            <h:inputText class="w-full h-9 text-xl text-black" id="confcode" />
-                            <h:message for="confcode" />
-                            <div class="clear-both"></div>
+                        <h:panelGroup id="confcodediv">
+                            <h:panelGroup class="text-red-700" rendered="#{not empty passwordReset.confirmationCode}">
+                                <h:inputHidden id = "originalcode" value="#{passwordReset.confirmationCode}"/>
+                                <h:outputLabel for="confcode" class="block text-white font-bold" value="Confirmation Code" />
+                                <h:inputText class="w-full h-9 text-xl text-black" id="confcode"
+                                             value="#{passwordReset.code}" onkeyup="return checkCode()">
+                                    <f:ajax render="passworddiv" event="keyup"/>
+                                </h:inputText>
+                                <h:message for="confcode" />
+                                <div class="clear-both"></div>
+                            </h:panelGroup>
                         </h:panelGroup>
 
-                        <h:panelGroup rendered="#{passwordReset.code == passwordReset.confirmationCode}">
-                            <div class="text-red-700">
-                                <label for="newpassword" class="block text-white font-bold">New Password
-                                </label>
-                                <input class="w-full h-9 text-xl text-black" type="password" id="newpassword" />
-                                <h:message for="newpassword" />
-                            </div>
+                        <h:panelGroup id="passworddiv" layout="block">
+                            <h:panelGroup rendered="#{passwordReset.code == passwordReset.confirmationCode}">
+                                <div class="text-red-700">
+                                    <label for="newpassword" class="block text-white font-bold">New Password
+                                    </label>
+                                    <h:inputSecret class="w-full h-9 text-xl text-black" id="newpassword" value="#{passwordReset.newpassword}"
+                                                   validatorMessage="Password should be more than 6 characters and include a number">
+                                        <f:validateRegex pattern="(?=.*\d)(?=.*[a-zA-Z])\w{6,}"/>
+                                    </h:inputSecret>
+                                    <h:message for="newpassword" />
+                                </div>
 
-                            <div class="text-red-700 mt-2">
-                                <label for="confpassword" class="block text-white font-bold">Confirm Password
-                                </label>
-                                <input class="w-full h-9 text-xl text-black" type="password" id="confpassword" />
-                                <h:message for="confpassword" />
-                            </div>
+                                <div class="text-red-700">
+                                    <label for="confpassword" class="block text-white font-bold">Confirm Password
+                                    </label>
+                                    <h:inputSecret class="w-full h-9 text-xl text-black" id="confpassword" value="#{passwordReset.confpassword}" />
+                                    <h:message for="confpassword" />
+                                </div>
+                            </h:panelGroup>
                         </h:panelGroup>
 
                         <div>
@@ -64,10 +75,10 @@
                                 <p><a class="text-white underline" href="#">Login</a></p>
                             </div>
                             <div class="float-right">
-                                <button
-                                    class="float-right p-2 px-20 bg-white rounded-xl text-red-800 font-bold text-xl border-0 mt-1">
-                                    Change Password
-                                </button>
+                                <h:commandButton
+                                    class="float-right p-2 px-20 bg-white rounded-xl text-red-800 font-bold text-xl border-0 mt-1"
+                                    value="Change Password" action="#{passwordReset.changePassword}">
+                                </h:commandButton>
                             </div>
                             <div class="clear-both"></div>
                         </div>
@@ -75,6 +86,26 @@
                 </div>
             </h:form>
         </div>
+        <script>
+            function checkCode() {
+                const elt = document.getElementById("resetform:confcode");
+                if (!elt)
+                    return false;
+                return elt.value.toString().length == 6;
+            }
+
+            function showCode(evt) {
+                console.log("event", evt);
+                if(evt.status != "success") return;
+                const elt = document.getElementById("resetform:originalcode");
+                if(elt == null) return;
+                const value = elt.value;
+                if(value == null) return;
+                if (value.toString().length &lt; 6) return;
+                console.log("value", value);
+                alert("Confirmation code is " + value.toString());
+            }
+        </script>
     </h:body>
 
 </html>
