--- a/web/studentPanel.html
+++ b/web/studentPanel.html
@@ -22,7 +22,7 @@
       rel="stylesheet">
 
 
-    <title>Student Painel</title>
+    <title>Student Panel</title>
 
     <style>
         /*Gyus, after we will move it to an .css file*/
