added teachers ui

--- a/web/teacher/footer.xhtml
+++ b/web/teacher/footer.xhtml
@@ -4,8 +4,8 @@
       xmlns:h="http://java.sun.com/jsf/html">
     <h:head>
         <title>Facelet Title</title>
-        <script id="globals" values="#{a.message}"></script>
         <h:outputStylesheet library="css" name="tails.css" />
+        <link rel="stylesheet" href="../resources/css/tails.css" />
     </h:head>
     <h:body class="">
         Hello from Facelets emma azza
