--- a/web/account/register.xhtml
+++ b/web/account/register.xhtml
@@ -11,7 +11,7 @@
     <link href="../resources/css/tails.css" rel="stylesheet" />
 </h:head>
 <h:body>
-    <div class="w-full h-full fixed z-[-99999]">
+    <div class="w-full h-full relative z-[-99999]">
         <h:form id="registerform">
             <div class="w-[40%] mx-auto mt-3 rounded-lg shadow-lg bg-gradient-to-br from-red-600 to-red-900">
                 <div class="mb-3">
@@ -86,6 +86,8 @@
                         <h:message id="newpasswordmessage" for="newpassword" class="text-white text-sm relative top-[-5px]" />
                     </div>
 
+                    
+
                     <div class="text-red-700 relative mt-3">
                         <label for="confpassword" class="block text-white font-bold">Confirm Password
                         </label>
@@ -107,6 +109,29 @@
                             </h:commandLink>
                         </div>
                         <div class="clear-both"></div>
+                    </div>
+
+                    <div>
+                        <p>Emma</p>
+                        <p>Emma</p>
+                        <p>Emma</p>
+                        <p>Emma</p>
+                        <p>Emma</p>
+                        <p>Emma</p>
+                        <p>Emma</p>
+                        <p>Emma</p>
+                        <p>Emma</p>
+                        <p>Emma</p>
+                        <p>Emma</p>
+                        <p>Emma</p>
+                        <p>Emma</p>
+                        <p>Emma</p>
+                        <p>Emma</p>
+                        <p>Emma</p>
+                        <p>Emma</p>
+                        <p>Emma</p>
+                        <p>Emma</p>
+                        <p>Emma</p>
                     </div>
                 </div>
             </div>
