--- a/web/teacher/oneteachercourse.html
+++ b/web/teacher/oneteachercourse.html
@@ -14,7 +14,7 @@
         integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ"
         crossorigin="anonymous"></script>
     <!--importing css for the navbar-->
-    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="../resources/css/navbar.css">
     <!--font awesome and google icon-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 
