--- a/web/account/login.xhtml
+++ b/web/account/login.xhtml
@@ -10,7 +10,7 @@
 </h:head>
 <h:body>
     <div class="w-full h-full fixed z-[-99999]">
-        <div class="w-[40%] py-3 m-auto mt-10 rounded-lg shadow-lg bg-red-800">
+        <div class="w-[40%] py-3 m-auto mt-10 rounded-lg shadow-lg bg-gradient-to-br from-red-600 to-red-900">
             <h:form id="loginform">
                 <div class="mb-3">
                     <p class="text-5xl text-white font-bold text-center p-3">
@@ -38,9 +38,8 @@
                     <div>
                         <div class="float-left">
                             <p class="mt-3 text-sm text-white font-bold">No account?</p>
-                            <p><a class="text-white underline" href="#">Register here</a></p>
-                            <p class="mt-3 text-sm text-white font-bold">Forgot password?</p>
-                            <p><a class="text-white underline" href="#">Reset it here </a></p>
+                            <h:link outcome="/account/register" value="Register here" class="text-white underline block"/>
+                            <h:link outcome="/account/password" value="Forgot password" class="text-white underline"/>
                         </div>
 
                         <div class="float-right">
