--- a/web/account/register.xhtml
+++ b/web/account/register.xhtml
@@ -48,19 +48,17 @@
                         </label>
                         <h:inputText class="w-full h-7 text-black rounded-lg px-1 font-bold tracking-wide" id="email"
                             value="#{userData.email}" validator="#{validators.validateEmail}">
-                            <f:ajax render="emailmessage" />
+                            <f:ajax render="emailmessage titlediv yeardiv" />
                         </h:inputText>
                         <h:message id="emailmessage" for="email" class="text-white text-sm relative top-[-5px]" />
                     </div>
 
                     <h:panelGroup id="titlediv">
-                        <h:panelGroup class="text-red-700 mt-3" rendered="#{userData.type eq 'student'}">
-                        <label for="year" class="block text-white font-bold">Year
+                        <h:panelGroup class="text-red-700 mt-3" rendered="#{userData.type eq 'teacher'}">
+                        <label for="title" class="block text-white font-bold">Academic Title
                         </label>
-                        <h:selectOneMenu class="w-full h-7 text-black rounded-lg px-1 font-bold tracking-wide"
-                            id="year" value="#{userData.year}">
-                            <f:selectItems value="#{globalConfig.years}" var="item" />
-                        </h:selectOneMenu>
+                        <h:inputText class="w-full h-7 text-black rounded-lg px-1 font-bold tracking-wide" id="title"
+                            value="#{userData.title}" />
                     </h:panelGroup>
                     </h:panelGroup>
 
@@ -123,10 +121,10 @@
                     <div>
                         <div class="float-left text-red-800">
                             <p class="mt-3 text-sm text-white font-bold">Have an account?</p>
-                            <p><a class="text-white underline" href="#">Login</a></p>
+                            <h:link outcome="/account/login" value="Login" class="text-white underline"/>
                         </div>
                         <div class="float-right">
-                            <h:commandLink value="Register" action="#{userData.registerStudent}"
+                            <h:commandLink value="Register" action="#{userData.register}"
                                 class="float-right p-2 px-24 bg-white rounded-xl text-red-800 font-bold text-xl border-0 mt-1 cursor-pointer">
                             </h:commandLink>
                         </div>
