--- a/web/student/account.xhtml
+++ b/web/student/account.xhtml
@@ -16,7 +16,7 @@
         integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ"
         crossorigin="anonymous"></script>
     <!--importing css for the navbar-->
-    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="../resources/css/navbar.css">
     <!--font awesome and google icon-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 
@@ -59,28 +59,7 @@
 <body>
     <!--for the navbar-->
 
-    <nav class="nav">
-        <a href="#" class="nav__link nav__link--active ">
-            <i class="material-icons nav__icon "> dashboard</i>
-            <span class="nav__text">Dashboard</span>
-        </a>
-
-        <a href="#" class="nav__link">
-            <i class="material-icons nav__icon">cast_for_education</i>
-            <span class="nav__text">Courses</span>
-        </a>
-
-        <a href="#" class="nav__link">
-            <i class="material-icons nav__icon"> inbox</i>
-            <span class="nav__text">Inbox</span>
-        </a>
-
-        <a href="#" class="nav__link">
-            <i class="material-icons nav__icon"> person</i>
-            <span class="nav__text">Profile</span>
-        </a>
-
-    </nav>
+    
 
 
 
