--- a/web/student/announcement.xhtml
+++ b/web/student/announcement.xhtml
@@ -1,14 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<h:head>
+    <h:outputStylesheet library="css" name="navbar.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+        integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
         crossorigin="anonymous"></script>
@@ -16,9 +20,10 @@
         integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ"
         crossorigin="anonymous"></script>
     <!--font awesome and google icon-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" />
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    
 
 
     <title>Announcements</title>
@@ -84,7 +89,7 @@
     </style>
 
 
-</head>
+</h:head>
 
 <body>
     <!--for the navbar-->
@@ -129,19 +134,19 @@
         <div class="col-md-9">
             <div class="ancmt">
                 <div class=" ">
-                    <hr>
+                    <hr />
                     <h4>Bilgisayar mughendisligine giris</h4>
                     <p>summary is going to be here </p>
                     <span>23/07/2021 16pm</span>
                 </div>
                 <div class=" ">
-                    <hr>
+                    <hr />
                     <h4>Bilgisayar mughendisligine giris</h4>
                     <p>summary is going to be here </p>
                     <span>23/07/2021 16pm</span>
                 </div>
                 <div class=" ">
-                    <hr>
+                    <hr />
                     <h4>Bilgisayar mughendisligine giris</h4>
                     <p>summary is going to be here </p>
                     <span>23/07/2021 16pm</span>
