--- a/web/student/announcement.xhtml
+++ b/web/student/announcement.xhtml
@@ -1,165 +1,52 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
+<!DOCTYPE html
+    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-<h:head>
-    <h:outputStylesheet library="css" name="navbar.css" />
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <h:head>
+        <title>Announcements</title>
+        <style>
+            .ancmt span {
+                color: rgb(90, 88, 88);
+            }
+        </style>
+    </h:head>
 
-    <!--bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ"
-        crossorigin="anonymous"></script>
-    <!--font awesome and google icon-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" />
-
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    
-
-
-    <title>Announcements</title>
-
-    <style>
-        body{
-            font-family:sans-serif;
-        }
-        /*for the navBar*/
-        .nav {
-            position: fixed;
-            z-index: 100;
-            /*bring it to the front*/
-            bottom: 0;
-            width: 100%;
-            height: 100px;
-            box-shadow: 0 0 3px rgb(0, 0, 0.2);
-            background-color: rgb(255, 0, 0);
-            display: flex;
-            overflow-x: auto;
-
-        }
-
-        .nav__link {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            flex-grow: 1;
-            min-width: 50px;
-            overflow: hidden;
-            white-space: nowrap;
-            /*avoid the text to go to other line*/
-            font-family: sans-serif;
-            font-size: 13px;
-            color: #ffffff;
-            text-decoration: none;
-            -webkit-tap-highlight-color: transparent;
-            transition: background-color 0.1s ease-in-out;
-
-        }
-
-        .nav__link:hover {
-            color: black;
-            background-color: #ffffff;
-        }
-
-        .nav__link--active {
-            color: black;
-            background-color: #ffffff;
-
-        }
-
-        .nav__icon {
-            font-size: 80px;
-        }
-        h4{
-            color: black;
-        }
-        .ancmt span{
-            color:rgb(90, 88, 88);
-        }
-    </style>
+    <body>
+        <ui:composition template="common.xhtml">
+            <ui:define name="title">
+                <h1 class="ml-10 p-3 text-4xl font-bold text-red-800">Announcements</h1>
+            </ui:define>
+            <ui:define name="content">
+            <div class="container-fluid row">
+                <div class="col-md-9">
+                    <div class="ancmt">
+                        <div class=" ">
+                            <h4>Bilgisayar mughendisligine giris</h4>
+                            <p>summary is going to be here </p>
+                            <span>23/07/2021 16pm</span>
+                        </div>
+                        <div class=" ">
+                            <hr />
+                            <h4>Bilgisayar mughendisligine giris</h4>
+                            <p>summary is going to be here </p>
+                            <span>23/07/2021 16pm</span>
+                        </div>
+                        <div class=" ">
+                            <hr />
+                            <h4>Bilgisayar mughendisligine giris</h4>
+                            <p>summary is going to be here </p>
+                            <span>23/07/2021 16pm</span>
+                        </div>
+                    </div>
 
 
-</h:head>
-
-<body>
-    <!--for the navbar-->
-
-    <nav class="nav">
-        <a href="#" class="nav__link nav__link--active ">
-            <i class="material-icons nav__icon "> dashboard</i>
-            <span class="nav__text">Dashboard</span>
-        </a>
-
-        <a href="#" class="nav__link">
-            <i class="material-icons nav__icon">cast_for_education</i>
-            <span class="nav__text">Courses</span>
-        </a>
-
-        <a href="#" class="nav__link">
-            <i class="material-icons nav__icon"> inbox</i>
-            <span class="nav__text">Inbox</span>
-        </a>
-
-        <a href="#" class="nav__link">
-            <i class="material-icons nav__icon"> person</i>
-            <span class="nav__text">Profile</span>
-        </a>
-
-
-
-    </nav>
-
-
-    <!--end of the navbar-->
-
-
-
-
-
-
-    <div class="container-fluid row">
-        <div class="col-md-3">
-        </div>
-
-        <div class="col-md-9">
-            <div class="ancmt">
-                <div class=" ">
-                    <hr />
-                    <h4>Bilgisayar mughendisligine giris</h4>
-                    <p>summary is going to be here </p>
-                    <span>23/07/2021 16pm</span>
                 </div>
-                <div class=" ">
-                    <hr />
-                    <h4>Bilgisayar mughendisligine giris</h4>
-                    <p>summary is going to be here </p>
-                    <span>23/07/2021 16pm</span>
-                </div>
-                <div class=" ">
-                    <hr />
-                    <h4>Bilgisayar mughendisligine giris</h4>
-                    <p>summary is going to be here </p>
-                    <span>23/07/2021 16pm</span>
-                </div>
+
             </div>
-
-
-        </div>
-
-    </div>
-
-
-
-</body>
+            </ui:define>
+        </ui:composition>
+    </body>
 
 </html>
