added student index

--- a/web/student/common.xhtml
+++ b/web/student/common.xhtml
@@ -31,7 +31,7 @@
     </div>
     <div class="fixed top-[73px] left-0 w-[20%]">
         <div class="space-y-6 border-r border-red-800 mx-2">
-            <a class="text-blue-800 text-2xl underline block" href="index.xhtml">Home</a>
+            <a class="text-blue-800 text-2xl underline block" href="home.xhtml">Home</a>
             <a class="text-blue-800 text-2xl block" href="announcement.xhtml">Announcements</a>
             <a class="text-blue-800 text-2xl block">Messages</a>
             <a class="text-blue-800 text-2xl block">Grades</a>
